--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,43 @@
 version: "3"
 
 services:
+  db:
+    image: postgres:11
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
+      - POSTGRES_DB=test
+  migration:
+    build: .
+    command: bash -c "./migrate -source file://migrations -database postgres://test:test@db:5432/test?sslmode=disable up"
+    env_file:
+      - db.env
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+  population:
+    build: .
+    command: bash -c "./cli/cli populate"
+    env_file:
+      - db.env
+    volumes:
+      - .:/app
+    depends_on:
+      - migration
+      - db
   web:
     build: .
-    command: bash -c "./build/build"
+    command: bash -c "./iban"
     volumes:
-      - .:/code
+      - .:/app
+    env_file:
+      - db.env
     ports:
       - "8080:8080"
+    depends_on:
+      - db
+      - migration
+      - population
