--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -24,5 +24,9 @@ profiles:
               - helm/postgres/values-dev.yaml
     activation:
       - kubeContext: rancher-desktop
-
-
+  - name: test
+    deploy:
+      kubeContext: test.eu-north-1.eksctl.io
+      kubectl:
+        manifests:
+          - k8s/integration/*
